# moonbasepp

./: CMakeLists.txt  README.md
cmake/: meson.cmake
include/moonbasepp/: moonbasepp_DeviceFingerprint.h  moonbasepp_JWT.h  moonbasepp_Licensing.h
source/: moonbasepp_DeviceFingerprint.cpp  moonbasepp_JWT.cpp  moonbasepp_Licensing.cpp
